--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,8 @@ nav a:hover {
 
 .buildingWrapper {
 	float: left;
-	max-width: 37%;
+	max-width: 31%;
+	height: 100%;
 }
 
 .building {
@@ -137,7 +138,7 @@ nav a:hover {
 }
 
 .valuesWrapper {
-	width: 60%;
+	width: 68%;
 	float: right;
 	text-align: center;
 	font-family: gsBold;
@@ -147,7 +148,27 @@ nav a:hover {
 .valuesWrapper ul {
 	list-style: none;
 	font-size: 50px;
-	text-shadow: 0px 2px 5px #888;
+	text-shadow: -1px 1px 0px #000;
+	margin-top: 200px;
+	margin-bottom: 0;
+	padding-left: 0;
+}
+
+.valuesWrapper li {
+	height: 558px;
+	padding: 0 20px 0 20px;
+}
+
+.valuesWrapper h3 {
+	color: #06799F;
+	margin: 0;
+}
+
+.valuesWrapper li span {
+	color: #fff;
+	color: #fff;
+	text-shadow: -2px 2px 2px #000;
+	text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.52);
 }
 
 .clouds {
@@ -175,6 +196,13 @@ nav a:hover {
 	background: url(../img/cloud_large.png) 0 0;
 	width: 800px;
 	height: 503px;
+}
+
+.grass {
+	background: url("../img/grass.jpg");
+	height: 616px;
+	width: 100%;
+	float: left;
 }
 
   /********************/
