--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,10 @@ nav a:hover {
 	color: #888;
 }
 
+nav li a.selected {
+	color: #FF5600;
+}
+
 .stitched {
    padding: 20px;
    margin: 0 10px 10px 10px;
@@ -160,15 +164,19 @@ nav a:hover {
 }
 
 .valuesWrapper h3 {
-	color: #06799F;
 	margin: 0;
+	text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.16);
+	color: #FF5600;
+	font-size: 72px;
 }
 
 .valuesWrapper li span {
-	color: #fff;
-	color: #fff;
-	text-shadow: -2px 2px 2px #000;
-	text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.52);
+	color: #525252;
+	font-size: 42px;
+	line-height: 60px;
+	display: block;
+	margin-top: 15px;
+	text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.16);
 }
 
 .clouds {
