--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,97 @@ nav li a.selected {
 	text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.16);
 }
 
+.servicesOuterWrapper {
+	height: 550px;
+	background: url(../img/ground-small3.png) 0 0;
+}
+
+.serviceContainer {
+	color: #fff;
+	font-family: gsBold;
+}
+
+.serviceContainer h2 {
+	margin: 0;
+	font-size: 42px;
+	color: #FF5600;
+	text-align: center;
+}
+
+.serviceContainer ul {
+	margin: 0;
+	padding: 0;
+}
+
+.serviceContainer li {
+	list-style: none;
+	font-size: 26px;
+	font-size: 26px;
+	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+}
+
+.serviceListLeft {
+	width: 45%;
+	float: left;
+	min-height: 190px;
+	margin-bottom: 35px;
+	border-right: 1px solid #fff;
+	padding-right: 50px;
+	border-top: 1px solid #fff;
+}
+
+.serviceListRight {
+	width: 45%;
+	float: right;
+	margin-bottom: 35px;
+	min-height: 190px;
+	border-top: 1px solid #fff;
+	border-left: 1px solid #fff;
+	padding-left: 50px;
+}
+
+.serviceListRight h2 {
+	text-align: left;
+}
+
+.serviceListRight ul {
+
+}
+
+.serviceListRight li {
+	text-align: left;
+}
+
+.serviceListLeft h2 {
+	text-align: right;
+}
+
+.serviceListLeft ul {
+
+}
+
+.serviceListLeft li {
+	text-align: right;
+}
+
+.contactOuterWrapper {
+	height: 500px;
+	background: url(../img/ground-small3.png) 0 0;
+	padding-top: 150px;
+	font-family: gsBold;
+}
+
+.contactOuterWrapper h2 {
+	margin: 0;
+	font-size: 60px;
+	text-align: right;
+	color: #FF5600;
+	width: 45%;
+	border-right: 1px solid #fff;
+	border-top: 1px solid #fff;
+	padding-right: 50px;
+}
+
 .clouds {
 	height: 230px;
 }
@@ -207,11 +298,11 @@ nav li a.selected {
 }
 
 .grass {
-	background: url("../img/grass-med.png");
+	background: url("../img/grass-med-feathered.png");
 	height: 102px;
 	width: 100%;
 	float: left;
-	top: -102px;
+	top: -88px;
 	position: relative;
 }
 
