--- a/css/styles.css
+++ b/css/styles.css
@@ -252,10 +252,14 @@ nav li a.selected {
 	text-align: right;
 }
 
+.servicesOuterWrapper .icon-trash {
+	padding-right: 10px;
+}
+
 .contactOuterWrapper {
-	height: 500px;
+	height: 700px;
 	background: url(../img/ground-small3.png) 0 0;
-	padding-top: 150px;
+	padding-top: 100px;
 	font-family: gsBold;
 }
 
@@ -315,6 +319,17 @@ nav li a.selected {
 	font-family: gsBold;
 	background-color: #fff;
 	background-color: rgba(255, 255, 255, 0.85);
+}
+
+.contactContainerRight .call {
+	color: #fff;
+	font-size: 32px;
+	font-family: gsBold;
+}
+
+.contactContainerRight .call h2,
+.contactContainerRight .email h2 {
+	font-size: 42px;
 }
 
 .contactContainerRight input.error,
