--- a/css/styles.css
+++ b/css/styles.css
@@ -139,11 +139,13 @@ nav li a.selected {
 	padding-top: 75px;
 	background: #ccc;
 	background: skyblue;
+	position: relative;
 }
 
 .valuesWrapper {
 	width: 68%;
 	float: right;
+	position: relative;
 	text-align: center;
 	font-family: gsBold;
 	color: #fff;
@@ -156,6 +158,8 @@ nav li a.selected {
 	margin-top: 200px;
 	margin-bottom: 0;
 	padding-left: 0;
+	z-index: 100;
+	position: relative;
 }
 
 .valuesWrapper li {
@@ -177,6 +181,14 @@ nav li a.selected {
 	display: block;
 	margin-top: 15px;
 	text-shadow: -2px 2px 2px rgba(0, 0, 0, 0.16);
+}
+
+.valuesWrapper .icon-smile,
+.valuesWrapper .icon-lock,
+.valuesWrapper .icon-shield,
+.valuesWrapper .icon-book,
+.valuesWrapper .icon-umbrella {
+	padding-left: 15px;
 }
 
 .servicesOuterWrapper {
@@ -388,6 +400,33 @@ nav li a.selected {
 	float: left;
 	top: -88px;
 	position: relative;
+	z-index: 2;
+}
+
+.flower {
+	background: url("../img/flower-large.png");
+	height: 502px;
+	width: 100%;
+	top: 2660px;
+	left: 85%;
+	z-index: 1;
+	position: relative;
+	background-repeat: no-repeat;
+}
+
+.treeBranch {
+	/*background: url("../img/branch-large.png");*/
+	background-repeat: no-repeat;
+	width: 500px;
+	height: 185px;
+	position: fixed;
+	right: -10px;
+}
+
+.bird {
+	position: fixed;
+	right: -10px;
+	width: 150px;
 }
 
 footer {
