Successful contact send text now styled.

--- a/css/styles.css
+++ b/css/styles.css
@@ -372,6 +372,11 @@ nav li a.selected {
 	cursor: pointer;
 }
 
+.contactFormSubmitText {
+	font-size: 26px;
+	color: #fff;
+}
+
 .clouds {
 	height: 230px;
 }
